Optimize volume and speed string generation, and all callers
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5858 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3792,8 +3792,8 @@ BEGIN
                             "Connected to %lu neighbour(s).  %s in local library."
     IDS_STATUS_BAR_CONNECTING "Connecting to the network..."
     IDS_STATUS_BAR_DISCONNECTED "Not connected to the network."
-    IDS_STATUS_BAR_BANDWIDTH "%s in : %s out [D:%i/U:%i]"
-    IDS_TRAY_TIP            "[H:%i] %s in : %s out [D:%i/U:%i]"
+    IDS_STATUS_BAR_BANDWIDTH "%s in : %s out [D:%I64i/U:%I64i]"
+    IDS_TRAY_TIP            "[H:%I64i] %s in : %s out [D:%I64i/U:%I64i]"
     IDS_NETWORK_CONNECT     "Connect"
     IDS_NETWORK_CONNECTING  "Connecting..."
     IDS_NETWORK_CONNECTED   "Connected"
