--- a/vc7_1/MediaLibraryBuilder.vcproj
+++ b/vc7_1/MediaLibraryBuilder.vcproj
@@ -81,6 +81,7 @@
 			ConfigurationType="2"
 			UseOfATL="0"
 			ATLMinimizesCRunTimeLibraryUsage="TRUE"
+			CharacterSet="1"
 			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
@@ -235,21 +236,6 @@
 			Name="Generated Files"
 			Filter="">
 			<File
-				RelativePath=".\release\plugins\medialibrarybuilder\MediaLibraryBuilder_i.c">
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"/>
-				</FileConfiguration>
-			</File>
-			<File
 				RelativePath=".\debug\plugins\medialibrarybuilder\MediaLibraryBuilder_i.c">
 				<FileConfiguration
 					Name="Debug|Win32">
@@ -264,6 +250,21 @@
 					<Tool
 						Name="VCCLCompilerTool"
 						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\release\plugins\medialibrarybuilder\MediaLibraryBuilder_i.c">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"/>
 				</FileConfiguration>
 			</File>
 		</Filter>
