Fixed non-resizable Search dialog (now can be resized as before)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6016 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -380,10 +380,10 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,185,93,50,14
 END
 
-IDD_NEW_SEARCH DIALOG  0, 0, 238, 60
-STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU
+IDD_NEW_SEARCH DIALOGEX 0, 0, 238, 60
+STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "New Search|Search Again|Find in Library"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_SEARCH,5,5,225,12,ES_AUTOHSCROLL
     COMBOBOX        IDC_SCHEMAS,5,20,225,245,CBS_DROPDOWNLIST | 
