Removed dups from setup folder and tweaked setup scripts to using current build files
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6020 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/GFLImageServices.vcproj
+++ b/vc7_1/GFLImageServices.vcproj
@@ -2,7 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="GFLImageServices">
+	Name="GFLImageServices"
+	RootNamespace="GFLImageServices">
 	<Platforms>
 		<Platform
 			Name="Win32"/>
@@ -57,8 +58,9 @@
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Copying libgfl267.dll"
-				CommandLine="copy ..\setup\plugins\libgfl267.dll &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y &gt; nul"/>
+				Description="Copying libgfl267.dll..."
+				CommandLine="copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y
+copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(TargetDir)&quot; /y"/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
 			<Tool
@@ -136,8 +138,9 @@
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Copying libgfl267.dll"
-				CommandLine="copy ..\setup\plugins\libgfl267.dll &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y &gt; nul"/>
+				Description="Copying libgfl267.dll..."
+				CommandLine="copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y
+copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(TargetDir)&quot; /y"/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
 			<Tool
