--- a/vc7_1/Shareaza.vcproj
+++ b/vc7_1/Shareaza.vcproj
@@ -3068,6 +3068,9 @@
 				RelativePath="..\shareaza\Res\Hand.cur">
 			</File>
 			<File
+				RelativePath="..\shareaza\Res\Hash.ico">
+			</File>
+			<File
 				RelativePath="..\shareaza\Res\HashMismatch.htm">
 			</File>
 			<File
@@ -3123,6 +3126,9 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\Res\Move.cur">
+			</File>
+			<File
+				RelativePath="..\shareaza\Res\MusicBrainz.bmp">
 			</File>
 			<File
 				RelativePath="..\shareaza\Res\Navbar.bmp">
