Whoops, forgot to save the last change
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6024 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/Installer.vcproj
+++ b/vc7_1/Installer.vcproj
@@ -68,7 +68,8 @@
 		<File
 			RelativePath=".\MakeInstaller.bat">
 			<FileConfiguration
-				Name="Debug|Win32">
+				Name="Debug|Win32"
+				ExcludedFromBuild="TRUE">
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Making Installer..."
@@ -77,7 +78,8 @@
 					Outputs="&quot;$(SolutionDir)$(ConfigurationName)\geoip.dll&quot;"/>
 			</FileConfiguration>
 			<FileConfiguration
-				Name="Release|Win32">
+				Name="Release|Win32"
+				ExcludedFromBuild="TRUE">
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Making Installer..."
